<resources>

    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="title">Look at my GUI</string>
    <string name="button">Click Here</string>
    <string name="checkbox">Check this out!</string>

    <string name="switchbox">Switch on / off</string>
    <string name="toast">Here\'s more information</string>
    <string name="snackbar_off">The switch is now off</string>
    <string name="snackbar_on">The switch is now on</string>
    <string name="snackbar_undo">Undo</string>
    <string name="todo">TODO</string>
    <!-- Login Activity -->
    <string name="email">Enter your email address:</string>
    <string name="email_hint">Type email here</string>
    <string name="password">Type your password:</string>
    <string name="login_button">Login</string>
    <!-- Profile Activity -->
    <string name="profile_title">Your profile</string>
    <string name="profile_name">Your name:</string>
    <string name="profile_name_hint">Enter your name</string>
    <string name="profile_email">Your email:</string>
    <string name="profile_email_hint">Enter your email here</string>
    <string name="profile_picture">Your picture:</string>
    <string name="profile_picture_hint">Click the button above to take a picture.</string>

    //Lab 4:
    <string name="chatbutton">Go to chat</string>
    <string name="EditText">Type here</string>
    <string name="send_button">SEND</string>
    <string name="receive_button">RECEIVE</string>

    //Lab 6:
    <string name="weather">Weather Forecast</string>
    <string name="cW">Current </string>
    <string name="minT">Min </string>
    <string name="maxT">Max </string>
    <!-- TODO: Remove or change this placeholder text -->

    //Lab 7:
    <string name="messagehere">Message Here</string>
    <string name="id">ID=</string>
    <string name="Sendmessage">Is a Send Message</string>
    <string name="hide_button">HIDE</string>

    //Lab8:
    <string name="toolbar">Go to Toolbar Page</string>
    <string name="aButton">HI</string>
    <string name="delivery">Track Delivery</string>
    <string name="paypal">Payment</string>
    <string name="shop">SHOP</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>