<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/profile_title" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_name" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_name_hint"
        android:autofillHints="Enter your name"
        android:nextFocusDown="@+id/weather" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_email" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_email_hint"
        android:nextFocusRight="@id/profile_picture"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_picture" />

    <ImageButton
        android:id="@+id/profile_picture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        android:nextFocusLeft="@id/emailEditText"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_picture_hint" />

    <Button
        android:id="@+id/chatbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/chatbutton"/>

    <Button
        android:id="@+id/weather"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:nextFocusUp="@id/name_edit"/>

</LinearLayout>