<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/chat"
        android:title="@string/chatbutton"
        android:orderInCategory="50"
        app:showAsAction="always"/>

    <item android:id="@+id/weather"
        android:orderInCategory="50"
        app:showAsAction="always|collapseActionView"
        android:title="@string/weather"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/loginbutton"
        android:orderInCategory="50"
        app:showAsAction="always|collapseActionView"
        android:title="@string/login_button"
        tools:ignore="AlwaysShowAction" />

</menu>